[tool.poetry]
name = "thecodercarbon"
version = "0.1.0"
description = ""
authors = ["Luis Antonio Correa Leyva <correaleyval@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi = "^0.64.0"
pyppeteer = "^0.2.5"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
